# wemod-pro-unlocker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml  README.md  update-asar.bat
cli/src/: asar.rs  fetchIntercept.js  files.rs  folders.rs  main.rs  patches.rs  updates.rs  vendorPatch.js  versions.rs
crates.io-wrapper/: .gitignore  Cargo.toml  README.md
crates.io-wrapper/src/: files.rs  main.rs
gui/: .gitignore  App.xaml.cs  MainWindow.xaml.cs  README.md  WMPU-GUI.csproj  WMPU-GUI.sln
gui/Properties/: launchSettings.json
gui/Properties/PublishProfiles/: FolderProfile.pubxml
gui/Utils/: UpdateManager.cs  WindowsSystemDispatcherQueueHelper.cs
gui/WMPU-GUI/: App.xaml  MainWindow.xaml  Package.appxmanifest  WMPU-GUI.csproj  app.manifest
gui/WMPU-GUI-PackagingProject/: Package.appxmanifest  WMPU-GUI-PackagingProject.wapproj  WMPU-GUI-PackagingProject_TemporaryKey.pfx
gui/WMPU-GUI/Utils/: UnlockManager.cs
src/: fetchIntercept.js  main.rs  vendorPatch.js
static/: installer-x64.appinstaller
updater/: go.mod  go.sum  main.go
