[package]
name = "wemod-pro-unlocker"
description = "This program patches the WeMod app to think you're a pro subscriber"
license = "MIT"
homepage = "https://github.com/bennett-sh/wemod-pro-unlocker"
repository = "https://github.com/bennett-sh/wemod-pro-unlocker"
version = "0.4.1"
edition = "2021"

[dependencies]
colored = "2.0.0"
windirs = "1.0.1"
simple--args = "1.1.1"
version-compare = "0.1.0"
