[package]
name = "wemod-pro-unlocker"
description = "This program patches the WeMod app to think you're a pro subscriber"
license = "MIT"
homepage = "https://github.com/bennett-sh/wemod-pro-unlocker"
repository = "https://github.com/bennett-sh/wemod-pro-unlocker"
version = "1.0.0"
edition = "2021"

[dependencies]
